--- a/src/GUI/layouts/LoginGUI.fxml
+++ b/src/GUI/layouts/LoginGUI.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #2196f3;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLLoginController">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #FFFFFF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.FXMLLoginController">
    <children>
       <AnchorPane layoutX="418.0" layoutY="36.0" prefHeight="429.0" prefWidth="344.0" style="-fx-background-color: #8bc34a;">
          <children>
@@ -20,12 +20,12 @@
                   <Font name="Dubai Medium" size="32.0" />
                </font>
             </Label>
-            <Button fx:id="loginBtn" layoutX="74.0" layoutY="215.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="30.0" prefWidth="181.0" style="-fx-background-color: #a5d6a7;" text="Log In">
+            <Button fx:id="loginBtn" layoutX="74.0" layoutY="215.0" mnemonicParsing="false" onAction="#handleLogin" prefHeight="30.0" prefWidth="181.0" style="-fx-background-color: #1b5e20;" text="Log In" textFill="WHITE">
                <font>
                   <Font name="Dubai Medium" size="12.0" />
                </font>
             </Button>
-            <Label fx:id="info1" layoutX="52.0" layoutY="254.0" prefHeight="121.0" prefWidth="292.0">
+            <Label fx:id="info1" layoutX="26.0" layoutY="253.0" prefHeight="121.0" prefWidth="292.0">
                <font>
                   <Font name="Dubai Medium" size="16.0" />
                </font>
@@ -34,7 +34,7 @@
       </AnchorPane>
       <ImageView fitHeight="429.0" fitWidth="271.0" layoutX="61.0" layoutY="36.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../Pictures/test.png" />
+            <Image url="@../../Pictures/test.png" />
          </image>
       </ImageView>
    </children>
