--- a/src/GUI/layouts/MainGUI.fxml
+++ b/src/GUI/layouts/MainGUI.fxml
@@ -5,16 +5,15 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLMainController">
+<AnchorPane prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.FXMLMainController">
    <children>
-      <AnchorPane prefHeight="800.0" prefWidth="287.0" style="-fx-background-color: #2e7d32;">
+      <AnchorPane prefHeight="800.0" prefWidth="287.0" style="-fx-background-color: #8bc34a;">
          <children>
-            <Label contentDisplay="CENTER" layoutX="20.0" layoutY="14.0" prefHeight="85.0" prefWidth="247.0" text="ECCO Canteen">
+            <Label contentDisplay="CENTER" layoutX="19.0" prefHeight="85.0" prefWidth="247.0" text="ECCO Canteen">
                <font>
                   <Font name="Dubai Medium" size="40.0" />
                </font>
@@ -47,17 +46,17 @@
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
                <image>
-                  <Image url="@../Pictures/food_64px.png" />
+                  <Image url="@../../Pictures/food_64px.png" />
                </image>
             </ImageView>
             <ImageView fx:id="image2" fitHeight="71.0" fitWidth="82.0" layoutX="25.0" layoutY="220.0" onMousePressed="#showDrinks" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Pictures/soda_water_64px.png" />
+                  <Image url="@../../Pictures/soda_water_64px.png" />
                </image>
             </ImageView>
             <ImageView fx:id="image4" fitHeight="71.0" fitWidth="82.0" layoutX="25.0" layoutY="709.0" onMousePressed="#showStatistics" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Pictures/statistics_80px.png" />
+                  <Image url="@../../Pictures/statistics_80px.png" />
                </image>
             </ImageView>
             <Label fx:id="balanceLabel" layoutX="113.0" layoutY="629.0" onMousePressed="#showBalance" text="Add Balance" textFill="WHITE">
@@ -67,33 +66,25 @@
             </Label>
             <ImageView fx:id="image3" fitHeight="71.0" fitWidth="82.0" layoutX="25.0" layoutY="620.0" onMousePressed="#showBalance" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Pictures/payment_history_24px.png" />
+                  <Image url="@../../Pictures/payment_history_24px.png" />
                </image>
             </ImageView>
-            <Label layoutX="20.0" layoutY="530.0" text="Reception">
+            <Label layoutX="20.0" layoutY="530.0" text="Reception" textFill="WHITE">
                <font>
                   <Font name="Dubai Medium" size="40.0" />
                </font>
-               <textFill>
-                  <LinearGradient endX="1.0" endY="1.0">
-                     <stops>
-                        <Stop color="#b3fff5" />
-                        <Stop color="WHITE" offset="1.0" />
-                     </stops>
-                  </LinearGradient>
-               </textFill>
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="286.0" prefHeight="59.0" prefWidth="917.0" style="-fx-background-color: #4caf50;">
+      <AnchorPane layoutX="286.0" prefHeight="59.0" prefWidth="917.0" style="-fx-background-color: #8bc34a;">
          <children>
             <ImageView fitHeight="59.0" fitWidth="62.0" layoutX="858.0" onMousePressed="#showSettings" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../Pictures/settings_32px.png" />
+                  <Image url="@../../Pictures/settings_32px.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="286.0" layoutY="59.0" prefHeight="740.0" prefWidth="917.0" style="-fx-background-color: #c8e6c9;" />
+      <AnchorPane layoutX="286.0" layoutY="59.0" prefHeight="740.0" prefWidth="917.0" style="-fx-background-color: #FFFFFF;" />
    </children>
 </AnchorPane>
