--- a/src/GUI/layouts/Statistics.fxml
+++ b/src/GUI/layouts/Statistics.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="StatisticsView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.FXMLStatisticsController">
+<BorderPane fx:id="StatisticsView" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.FXMLStatisticsController">
    <center>
       <TableView fx:id="productTable" prefHeight="354.0" prefWidth="151.0" BorderPane.alignment="CENTER">
         <columns>
