--- a/src/GUI/layouts/MainGUI.fxml
+++ b/src/GUI/layouts/MainGUI.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -83,6 +84,7 @@
                   <Image url="@../../Pictures/settings_32px.png" />
                </image>
             </ImageView>
+            <Button layoutX="168.0" layoutY="17.0" mnemonicParsing="false" text="Button" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="277.0" layoutY="59.0" prefHeight="495.0" prefWidth="559.0" style="-fx-background-color: #FFFFFF;" />
