//12TH COMMIT ADDED/CHANGED PRODUCTCONTROLLER/FXML CART AND PRODUCT ADDING ADDED

--- a/src/GUI/layouts/MainGUI.fxml
+++ b/src/GUI/layouts/MainGUI.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -27,32 +26,22 @@
                   </RadialGradient>
                </textFill>
             </Label>
-            <Label fx:id="drinksLabel" layoutX="142.0" layoutY="221.0" onMousePressed="#showDrinks" text="Drinks" textFill="WHITE">
-               <font>
-                  <Font name="Dubai Medium" size="30.0" />
-               </font>
-            </Label>
             <Label fx:id="statisticLabel" layoutX="120.0" layoutY="491.0" onMousePressed="#showStatistics" text="Statistics" textFill="WHITE">
                <font>
                   <Font name="Dubai Medium" size="32.0" />
                </font>
             </Label>
-            <Label fx:id="foodLabel" layoutX="147.0" layoutY="127.0" onMousePressed="#showFood" prefHeight="54.0" prefWidth="71.0" text="Food" textFill="WHITE">
+            <Label fx:id="productsLabel" layoutX="120.0" layoutY="127.0" onMousePressed="#showProducts" prefHeight="54.0" prefWidth="125.0" text="Products" textFill="WHITE">
                <font>
                   <Font name="Dubai Medium" size="30.0" />
                </font>
             </Label>
-            <ImageView fx:id="image1" fitHeight="71.0" fitWidth="82.0" layoutX="11.0" layoutY="118.0" onMousePressed="#showFood" opacity="0.76" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="image1" fitHeight="71.0" fitWidth="82.0" layoutX="11.0" layoutY="118.0" opacity="0.76" pickOnBounds="true" preserveRatio="true">
                <cursor>
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
                <image>
-                  <Image url="@../../Pictures/food_64px.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="image2" fitHeight="71.0" fitWidth="82.0" layoutX="11.0" layoutY="212.0" onMousePressed="#showDrinks" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../Pictures/soda_water_64px.png" />
+                  <Image url="@../../Pictures/add_shopping_cart_80px.png" />
                </image>
             </ImageView>
             <ImageView fx:id="image4" fitHeight="71.0" fitWidth="82.0" layoutX="11.0" layoutY="477.0" onMousePressed="#showStatistics" pickOnBounds="true" preserveRatio="true">
@@ -70,7 +59,7 @@
                   <Image url="@../../Pictures/payment_history_24px.png" />
                </image>
             </ImageView>
-            <Label layoutX="46.0" layoutY="304.0" text="Reception" textFill="WHITE">
+            <Label layoutX="47.0" layoutY="298.0" text="Reception" textFill="WHITE">
                <font>
                   <Font name="Dubai Medium" size="40.0" />
                </font>
@@ -84,7 +73,6 @@
                   <Image url="@../../Pictures/settings_32px.png" />
                </image>
             </ImageView>
-            <Button layoutX="168.0" layoutY="17.0" mnemonicParsing="false" text="Button" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="277.0" layoutY="59.0" prefHeight="495.0" prefWidth="559.0" style="-fx-background-color: #FFFFFF;" />
