--- a/src/GUI/layouts/Statistics.fxml
+++ b/src/GUI/layouts/Statistics.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,8 +11,8 @@
    <center>
       <TableView fx:id="productTable" prefHeight="354.0" prefWidth="151.0" BorderPane.alignment="CENTER">
         <columns>
-          <TableColumn fx:id="ProductList" prefWidth="75.0" text="Product" />
-          <TableColumn fx:id="QuantityList" prefWidth="75.0" text="Quantity" />
+          <TableColumn fx:id="colProductList" prefWidth="75.0" text="Product name" />
+          <TableColumn fx:id="colQuantityList" prefWidth="75.0" text="Quantity sold" />
         </columns>
       </TableView>
    </center>
@@ -21,4 +22,7 @@
    <bottom>
       <Button fx:id="RefreshButton" mnemonicParsing="false" onAction="#Refresh" text="Refresh" BorderPane.alignment="CENTER" />
    </bottom>
+   <top>
+      <ComboBox fx:id="comboProduct" prefWidth="150.0" BorderPane.alignment="CENTER" />
+   </top>
 </BorderPane>
