--- a/src/GUI/layouts/BalanceGUI.fxml
+++ b/src/GUI/layouts/BalanceGUI.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,9 +12,9 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.FXMLBalanceController">
     <children>
-        <AnchorPane prefHeight="554.0" prefWidth="277.0" style="-fx-background-color: #8bc34a;">
+        <AnchorPane prefHeight="554.0" prefWidth="245.0" style="-fx-background-color: #8bc34a;">
             <children>
-                <Label contentDisplay="CENTER" layoutX="51.0" lineSpacing="5.0" prefHeight="85.0" prefWidth="177.0" text="Reception" underline="true">
+                <Label contentDisplay="CENTER" layoutX="36.0" lineSpacing="5.0" prefHeight="85.0" prefWidth="177.0" text="Reception" underline="true">
                     <font>
                         <Font name="Dubai Medium" size="40.0" />
                     </font>
@@ -28,7 +27,7 @@
                   </LinearGradient>
                     </textFill>
                 </Label>
-            <Button fx:id="btnMainMenu" layoutX="112.0" layoutY="473.0" mnemonicParsing="false" onAction="#showMainMenu" style="-fx-background-color: #7cb342;" text="Main Menu" textFill="WHITE">
+            <Button fx:id="btnMainMenu" layoutX="84.0" layoutY="473.0" mnemonicParsing="false" onAction="#showMainMenu" style="-fx-background-color: #7cb342;" text="Main Menu" textFill="WHITE">
                <font>
                   <Font name="Dubai Medium" size="25.0" />
                </font>
@@ -41,44 +40,53 @@
 
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="277.0" prefHeight="59.0" prefWidth="558.0" style="-fx-background-color: #8bc34a;">
+        <AnchorPane layoutX="235.0" prefHeight="59.0" prefWidth="601.0" style="-fx-background-color: #8bc34a;">
             <children>
-                <ImageView fitHeight="59.0" fitWidth="62.0" layoutX="500.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="59.0" fitWidth="62.0" layoutX="542.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@Pictures/settings_32px.png" />
                     </image>
                 </ImageView>
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="277.0" layoutY="59.0" prefHeight="495.0" prefWidth="559.0" style="-fx-background-color: #FFFFFF;">
+        <AnchorPane layoutX="245.0" layoutY="59.0" prefHeight="495.0" prefWidth="590.0" style="-fx-background-color: #FFFFFF;">
          <children>
-            <TextField fx:id="amountTextField" layoutX="23.0" layoutY="96.0" promptText="Enter amount">
+            <TextField fx:id="amountTextField" layoutX="33.0" layoutY="142.0" prefHeight="38.0" prefWidth="184.0" promptText="Enter Amount">
                <font>
                   <Font name="Dubai Medium" size="15.0" />
                </font>
             </TextField>
-            <Label layoutX="49.0" layoutY="31.0" text="Add Balance">
+            <Label layoutX="53.0" layoutY="31.0" text="Add Balance">
                <font>
                   <Font name="Dubai Medium" size="28.0" />
                </font>
             </Label>
-            <Button fx:id="btnOK" layoutX="227.0" layoutY="96.0" mnemonicParsing="false" onAction="#handleAddBalance" prefHeight="38.0" prefWidth="50.0" text="OK">
+            <Button fx:id="btnOK" layoutX="236.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleAddBalance" prefHeight="38.0" prefWidth="50.0" text="OK">
                <font>
                   <Font name="Dubai Medium" size="12.0" />
                </font>
             </Button>
-            <Button fx:id="btnViewBalance" layoutX="492.0" layoutY="96.0" mnemonicParsing="false" onAction="#handleViewBalance" prefHeight="38.0" prefWidth="59.0" text="OK">
+            <Button fx:id="btnViewBalance" layoutX="526.0" layoutY="142.0" mnemonicParsing="false" onAction="#handleViewBalance" prefHeight="38.0" prefWidth="50.0" text="OK">
                <font>
                   <Font name="Dubai Medium" size="12.0" />
                </font>
             </Button>
-            <Label layoutX="332.0" layoutY="31.0" text="View Balance">
+            <Label layoutX="354.0" layoutY="31.0" text="View Balance">
                <font>
                   <Font name="Dubai Medium" size="28.0" />
                </font>
             </Label>
-            <ListView fx:id="balanceListView" layoutX="309.0" layoutY="186.0" prefHeight="200.0" prefWidth="200.0" />
-            <TextField layoutX="314.0" layoutY="96.0" prefHeight="38.0" prefWidth="161.0" promptText="Enter CardID">
+            <TextField fx:id="CardIDNo" layoutX="33.0" layoutY="85.0" prefHeight="38.0" prefWidth="184.0" promptText="Enter CardID">
+               <font>
+                  <Font name="Dubai Medium" size="15.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="CardIDNo2" layoutX="351.0" layoutY="81.0" prefHeight="38.0" prefWidth="160.0" promptText="Enter CardID">
+               <font>
+                  <Font name="Dubai Medium" size="15.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="CardIDHis1" layoutX="351.0" layoutY="142.0" prefHeight="38.0" prefWidth="160.0">
                <font>
                   <Font name="Dubai Medium" size="15.0" />
                </font>
