//17TH COMMIT Code clean up and java docs made

--- a/src/GUI/layouts/StatisticGUI.fxml
+++ b/src/GUI/layouts/StatisticGUI.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,7 +12,6 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.Button?>
 <AnchorPane prefHeight="554.0" prefWidth="827.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.FXMLStatisticController">
     <children>
         <AnchorPane prefHeight="554.0" prefWidth="229.0" style="-fx-background-color: #8bc34a;">
@@ -41,7 +41,7 @@
                 </ImageView>
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="244.0" prefHeight="73.0" prefWidth="592.0" style="-fx-background-color: #8bc34a;">
+        <AnchorPane layoutX="247.0" prefHeight="73.0" prefWidth="592.0" style="-fx-background-color: #8bc34a;">
             <children>
                 <ImageView fitHeight="65.0" fitWidth="76.0" layoutX="527.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
                     <image>
@@ -52,12 +52,18 @@
         </AnchorPane>
         <AnchorPane layoutX="244.0" layoutY="72.0" prefHeight="482.0" prefWidth="592.0" style="-fx-background-color: #FFFFFF;">
          <children>
-            <LineChart layoutX="-4.0" layoutY="23.0" prefHeight="457.0" prefWidth="592.0" style="-fx-background-color: transparent;" title="Sales Statistics">
+            <LineChart fx:id="lineChart" layoutX="-4.0" layoutY="-2.0" prefHeight="482.0" prefWidth="592.0" title="Sales Statistics">
               <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <CategoryAxis fx:id="dateSold" label="Date Sold" prefHeight="33.0" prefWidth="518.0" side="BOTTOM">
+                     <tickLabelFont>
+                        <Font name="Dubai Medium" size="8.0" />
+                     </tickLabelFont></CategoryAxis>
               </xAxis>
               <yAxis>
-                <NumberAxis side="LEFT" />
+                <NumberAxis fx:id="totalPrice" label="Total Price" side="LEFT">
+                     <tickLabelFont>
+                        <Font name="Dubai Medium" size="8.0" />
+                     </tickLabelFont></NumberAxis>
               </yAxis>
             </LineChart>
          </children></AnchorPane>
