--- a/src/GUI/layouts/BalanceGUI.fxml
+++ b/src/GUI/layouts/BalanceGUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -37,19 +38,24 @@
                   <Image url="@Pictures/menu_64px.png" />
                </image>
             </ImageView>
+            <TextArea editable="false" layoutX="25.0" layoutY="94.0" prefHeight="62.0" prefWidth="200.0" style="-fx-background-color: #8bc34a;" text="Enter a CardID (1,2,3 or 4) &#10;and any amount then click 'OK'">
+               <font>
+                  <Font name="Dubai Medium" size="12.0" />
+               </font>
+            </TextArea>
 
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="235.0" prefHeight="59.0" prefWidth="601.0" style="-fx-background-color: #8bc34a;">
+        <AnchorPane layoutX="235.0" prefHeight="59.0" prefWidth="611.0" style="-fx-background-color: #8bc34a;">
             <children>
-                <ImageView fitHeight="59.0" fitWidth="62.0" layoutX="542.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="59.0" fitWidth="62.0" layoutX="552.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@Pictures/settings_32px.png" />
                     </image>
                 </ImageView>
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="245.0" layoutY="59.0" prefHeight="495.0" prefWidth="590.0" style="-fx-background-color: #FFFFFF;">
+        <AnchorPane layoutX="245.0" layoutY="59.0" prefHeight="495.0" prefWidth="601.0" style="-fx-background-color: #FFFFFF;">
          <children>
             <TextField fx:id="amountTextField" layoutX="33.0" layoutY="142.0" prefHeight="38.0" prefWidth="184.0" promptText="Enter Amount">
                <font>
@@ -91,6 +97,11 @@
                   <Font name="Dubai Medium" size="15.0" />
                </font>
             </TextField>
+            <Label layoutX="34.0" layoutY="191.0" prefHeight="17.0" prefWidth="184.0" text="Money Entered in DKK">
+               <font>
+                  <Font name="Dubai Medium" size="15.0" />
+               </font>
+            </Label>
          </children></AnchorPane>
     </children>
 </AnchorPane>
