--- a/src/GUI/layouts/ProductGUI.fxml
+++ b/src/GUI/layouts/ProductGUI.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane onMouseEntered="#putLabelstog" prefHeight="554.0" prefWidth="827.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.FXMLProductController">
+<AnchorPane onMouseEntered="#putLabelstog" prefHeight="554.0" prefWidth="827.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller.FXMLProductController">
     <children>
         <AnchorPane prefHeight="554.0" prefWidth="279.0" style="-fx-background-color: #8bc34a;">
             <children>
@@ -89,13 +89,31 @@
                   <Image url="@Pictures/milk.png" />
                </image>
             </ImageView>
-            <Label layoutX="56.0" layoutY="170.0" />
-            <Label fx:id="colaQTY" layoutX="252.0" layoutY="170.0" />
-            <Label fx:id="coffeeQTY" layoutX="53.0" layoutY="170.0" />
-            <Label fx:id="foodQTY" layoutX="53.0" layoutY="339.0" />
+            <Label layoutX="61.0" layoutY="159.0" prefHeight="22.0" prefWidth="12.0">
+               <font>
+                  <Font name="Dubai Light" size="12.0" />
+               </font></Label>
+            <Label fx:id="colaQTY" layoutX="252.0" layoutY="170.0">
+               <font>
+                  <Font name="Dubai Medium" size="12.0" />
+               </font></Label>
+            <Label fx:id="coffeeQTY" layoutX="53.0" layoutY="170.0">
+               <font>
+                  <Font name="Dubai Medium" size="12.0" />
+               </font></Label>
+            <Label fx:id="foodQTY" layoutX="53.0" layoutY="339.0">
+               <font>
+                  <Font name="Dubai Medium" size="12.0" />
+               </font></Label>
             <Label fx:id="fruitsQTY" layoutX="252.0" layoutY="339.0" />
-            <Label fx:id="waterQTY" layoutX="447.0" layoutY="170.0" />
-            <Label fx:id="milkQTY" layoutX="447.0" layoutY="331.0" />
+            <Label fx:id="waterQTY" layoutX="447.0" layoutY="170.0">
+               <font>
+                  <Font name="Dubai Medium" size="12.0" />
+               </font></Label>
+            <Label fx:id="milkQTY" layoutX="447.0" layoutY="331.0">
+               <font>
+                  <Font name="Dubai Medium" size="12.0" />
+               </font></Label>
          </children></AnchorPane>
     </children>
 </AnchorPane>
